[Fix] Font Picker preview text alignment
- Making text-align "left" as the default alignment to avoid any confusion as to when a font setting component is used without alignment control

--- a/src/ui-components/font-picker.scss
+++ b/src/ui-components/font-picker.scss
@@ -10,7 +10,7 @@
   padding: 15px;
 
   /* Visual */
-  text-align: center;
+  text-align: left;
   background-color: #efefef;
   border-radius: 8px;
 }
